# football-ai

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  readme.md
.claude/: settings.local.json
admin_panel/: Dockerfile  package.json
backend/: config.py  config.yaml  pyproject.toml  requirements.txt
backend/api/: routes.py  websocket.py
backend/cli/: commands.py
backend/core/: config.py  constants.py  exceptions.py
backend/data/: football.db
backend/data/mock/: mock_data_generator.py
backend/models/: coach.py  match.py  news.py  player.py  prediction.py  team.py
backend/models/enums/: __init__.py
backend/repositories/: coach_repo.py  database.py  match_event_repo.py  match_repo.py  news_repo.py  player_repo.py  prediction_repo.py  team_repo.py
backend/services/: __init__.py  notification_service.py  recommendation_service.py  redis_service.py
backend/services/ai/: __init__.py  llm_service.py  prediction_engine.py
backend/utils/: __init__.py  http_client.py  logger.py
collector_service/: Dockerfile  requirements.txt
collector_service/src/: main.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/chart/: StatsChart.vue  WinRatePie.vue
frontend/src/components/common/: MatchCard.vue  NewsItem.vue  PredictionCard.vue
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
notification_service/: requirements.txt
notification_service/src/: main.py
tests/: test_all.py
(+20 files in other folders)
