[project]
name = "football-ai"
version = "1.0.0"
description = "Football AI Platform - AI-powered football analysis and prediction system"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "urllib3>=2.5.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "pandas>=2.2.3",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]